desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
/* ... */
scrollbar button:disabled,
scrollbar button.horizontal:disabled,
scrollbar button.vertical:disabled {
	background-image: none;
	background-color: transparent;
	color: @insensitive_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

scrollbar slider,
scrollbar .slider {
	background-color: transparent;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	border-color: transparent;
	border-radius: 6px;
	border-width: 1px;
	border-image: none;
}

scrollbar.vertical slider,
scrollbar.vertical .slider {
	border-width: 1px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	min-width: 13px;
	min-height: 42px;
}

scrollbar.horizontal slider,
scrollbar.horizontal .slider {
	border-width: 1px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	min-height: 13px;
	min-width: 42px;
}

scrollbar slider:hover
scrollbar .slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar.vertical slider:hover,
scrollbar.vertical .slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar.horizontal slider:hover,
scrollbar.horizontal .slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar slider:hover:active,
scrollbar .slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar.vertical slider:hover:active,
scrollbar.vertical .slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar.horizontal slider:hover:active,
scrollbar.horizontal .slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar slider:disabled,
scrollbar .slider:disabled {
	background-image: none;
	background-color: shade(@theme_bg_color, 1.5);
}

scrollbar slider.fine-tune:hover:active,
scrollbar .slider.fine-tune:hover:active {
	background-image: url("assets/slider_fine_horizontal.svg"),
	                  linear-gradient(to top,
	                                  shade(@scroll_slider_color, 3.3),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
	background-repeat: no-repeat;
	background-position: center;
}

scrollbar.vertical slider.fine-tune:hover:active,
scrollbar.vertical .slider.fine-tune:hover:active  {
	background-image: url("assets/slider_fine_vertical.svg"),
	                  linear-gradient(to left,
	                                  shade(@scroll_slider_color, 3.3),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
	background-repeat: no-repeat;
	background-position: center;
}

/*********
 * Menus *
 *********/

/* this controls the general appearance of the menubar */
menubar,
.menubar {
    background-image: none;
    background-color: @theme_bg_color;
    border-width: 0px;
    border-style: none;
    padding: 0px;
    color: @theme_text_color;
    -GtkWidget-window-dragging: true;
}

menubar menuitem,
.menubar menuitem {
    -gtk-icon-style: regular;
    transition: all 300ms ease-out;
    padding: 3px 7px;
    border-width: 0px;
    border-style: none;
    background-color: transparent;
}

menu menuitem,
.menu menuitem {
    padding: 3px 4px;
    transition: all 300ms ease-out;
    border-width: 0px;
	border-radius: 3px 3px 0px 0px;
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    border-image: none;
	border-color:transparent;
}

menubar menuitem:hover,
.menubar menuitem:hover {
    background-image: none;
    background-color: @theme_selected_bg_color;
    border-style: solid;
    border-image: none;
    /* join menuitem to menu */
    border-radius: 3px 3px 0px 0px;
    border-width: 0px;
    border-color: @theme_selected_bg_color;
    color: @theme_text_color;
}

menubar menuitem:disabled,
.menubar menuitem:disabled {
	color: @insensitive_fg_color;
}

menuitem:disabled image,
.menuitem:disabled image,
menuitem:active:disabled image,
.menuitem:active:disabled image{
	 opacity: 0.5;
}

menu,
.menu {
    background-color: shade(@theme_selected_bg_color, 0.8);
    background-image: linear-gradient(to left,
                                      shade(@theme_selected_bg_color, 0.9),
                                      shade(@theme_selected_bg_color, 0.5));
    border-style: none;
    border-width: 0px;
    border-radius: 0;
    padding: 1px;
}
/* ... */

